# Project_CS163

./: Project_CS163.sln
MiniSearchEngine/: CMakeLists.txt  CMakeSettings.json  MiniSearchEngine.cpp  MiniSearchEngine.h  MiniSearchEngine.vcxproj  main.cpp
MiniSearchEngine/Data/: stopwords.txt  synonyms.txt
MiniSearchEngine/Search Engine-Data/__MACOSX/Search Engine-Data/: ._Data256.txt
MiniSearchEngine/controllers/: console.cpp  engine.cpp  history.txt  interface.cpp  load.cpp  trie.cpp
MiniSearchEngine/models/: SearchEngine.h  Trie.h  console.h  dirent.h
